# snails-machine

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  machine.toml  schema.json
.devcontainer/: Dockerfile  cargo-config.toml  compose.yaml  devcontainer.json
.github/: release-drafter.yaml  release-drafter.yml
.github/workflows/: build-linux.yaml  build-macos.yaml  build-win-gnu.yaml  build-win-msvc.yaml  build.yaml  ci.yaml  release.yaml
patricia-tree/: Cargo.toml
patricia-tree/src/: lib.rs
src/: bin.rs  builder.rs  config.rs  lib.rs  state.rs  turing_machine.rs
